samples/_failures_safe/1761251549_b14354_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_286d317d.c: In function ‘main’:
./samples/SAFE/__tmp_286d317d.c:146:18: error: expected ‘;’ at end of input
  146 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_286d317d.c:146:13: error: expected declaration or statement at end of input
  146 |             break
      |             ^~~~~
./samples/SAFE/__tmp_286d317d.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_286d317d.c:146:13: error: expected declaration or statement at end of input
